<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hibegin</groupId>
    <artifactId>simplewebserver-cli</artifactId>
    <version>0.1.5</version>
    <url>https://github.com/94fzb/simplewebserver-cli</url>

    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <java.version>11</java.version>
        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
        <junit.jupiter.version>5.8.1</junit.jupiter.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <imageName>simplewebserver-cli</imageName>
        <mainClass>com.hibegin.http.file.server.FileHttpServerApplication</mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.hibegin</groupId>
            <artifactId>simplewebserver</artifactId>
            <version>4.0.61</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.9.0</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/groups/staging</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>java-agent</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <arguments>
                                <argument>--enable-preview</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>com.hibegin.http.file.server.FileHttpServerNativeImageAgent</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>native</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.build.directory}/${imageName}</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <fallback>false</fallback>
                            <buildArgs>
                                <arg>
                                    -Ob
                                    -H:+UnlockExperimentalVMOptions
                                    --no-fallback
                                    --initialize-at-run-time=javax.net.ssl.*,sun.security.ssl.*,com.hibegin.http.server.SimpleHttpsWebServer,com.hibegin.common.io.handler.SslReadWriteSelectorHandler,com.hibegin.common.io.handler.SslChannelFactory,com.hibegin.common.io.handler.ReadWriteSelectorHandlerUtils
                                    --allow-incomplete-classpath
                                    -march=compatibility
                                    -H:DashboardDump=${imageName}
                                    -H:+DashboardAll
                                    -H:IncludeResources=
                                </arg>
                            </buildArgs>
                            <agent>
                                <enabled>true</enabled>
                            </agent>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
